<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simple_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkmode_gray"
    tools:context=".views.SimpleView">


...
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone"
        app:layout_constraintWidth_percent="0.6"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/white"
            android:hint="@string/password_hint"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="182dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="112dp"
        android:backgroundTint="@color/white"
        android:text="@string/password_login_text"
...
