...
    <string name="simple_fragment">Simple</string>
    <string name="compact_fragment">Compact</string>
    <string name="detailed_fragment">Detailed</string>
    <string name="battery_status"><u>Status:</u></string>
    <string name="logo_description">The Rub Motorsports Logo</string>
    <string name="display_battery_status"> Displays the current status of the battery</string>
    <string name="battery_status_okay">[OKAY]</string>
    <string name="battery_status_Critical">[CRITICAL]</string>
    <string name="simple_advice_box_critical">DANGER!\nCONTACT EMERGENCY CONTACTS!</string>
    <string name="simple_advice_box_okay"></string>
    <string name="emergency_contacts_title"><u>Emergency Contacts:</u></string>
    <string name="emergency_contacts">Email: Teto.Kasane@rub.de
        \n<u>Phone Number: 3.14159265358</u>
        \n
...
