<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/compact_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkmode_gray"
    tools:context=".views.CompactView">

    <androidx.constraintlayout.widget.ConstraintLayout
...
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout7"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/segment_image"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
...
